--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <main>
         <!-- section 1 -->
         <section class="hero">
-            <div class="container">
+            <div class="container-noflex">
             <h1 class="hero-title">Эффективные решения <br>для вашего бизнеса</h1>
             <button type="button" class="button" data-modal-open>Заказать услугу</button>
             <div class="backdrop is-hidden" data-modal>
@@ -150,7 +150,7 @@
         </section>
         <!-- section 3 -->
         <section class="section-third">
-           <div class="container">
+           <div class="container-noflex">
                 <h2 class="section-third__title">Чем мы занимаемся</h2>
                 <ul class="section-third__list">
                     <li class="section-third__item">
@@ -176,7 +176,7 @@
         </section>
         <!-- section 4 -->
         <section class="section-team">           
-               <div class="container">
+               <div class="container-noflex">
                 <h2 class="section-team__title">Наша команда</h2>
                     <ul class="section-team__list">
                         <li class="section-team__item">
@@ -336,7 +336,7 @@
                     </div>
         </section>
         <section class="section">
-            <div class="container">
+            <div class="container-noflex">
                 <h2 class="section-team__title">Постоянные клиенты</h2>
                 <ul class="section__list">
                     <li class="section__item"><a href="" class="section__link"><svg class="section__logo" width="41px"  height="46px">
