--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
     <main>
         <!-- section -->
         <section class="section-portfolio">
-            <div class="container">
+            <div class="container-noflex">
             <h1 class="visually-hidden">Работы</h1>
                 <ul class="section-portfolio__list">
                     <li class="section-portfolio__item"><button type="button" class="portfolio-btn portfolio-btn__current">Все</button></li>
