--- a/portfolio.html
+++ b/portfolio.html
@@ -10,8 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet"> -->
-    <link rel="stylesheet" href="/css/main.min.css">
-    <title>Домешнее задание №2</title>
+    <link rel="stylesheet" href="./css/main.min.css">
+    <title>SAAS</title>
 </head>
 
 <body>
